1.9-SNAPSHOT
------------
o Traversal Javascript is now security sandboxed. It is possible to turn the sandbox off for the next two releases, for backwards compatibility.

1.8.RC1 (2012-09-05)
--------------------
o Upgraded Jackson JAXRS to version 1.9.7 
o Keeping the Cypher execution engine between calls makes it possible to re-use execution plans
o added User-Agent header tracking to udc to determine rest-driver usage

1.8.M07 (2012-08-08)
--------------------
o Consoles in webadmin can now be disabled.

1.8.M06 (2012-07-06)
--------------------
o Fixed issue that stopped the server from starting without the UDC-jars.

1.8.M05 (2012-06-25)
--------------------
o Added support for multi line Cypher queries in webadmin browser

1.8.M03 (2012-05-24)
--------------------
o keep_logical_logs is now respected if set to false - default is still true

1.8.M02 (2012-05-11)
--------------------
o Support for streaming results for http batch operations.
o Proper encoding of Index URI key/value pairs.
o Fixed Swedish character problem in webadmin string properties.
o Webadmin chart labels have nice formatting now.

1.8.M01 (2012-04-26)
--------------------
o Added streaming to REST API. All representation implementations have been adapted to produce their data lazily.
o Added HTTP logging.

1.7 (2012-04-18)
----------------
o Added scored index results to REST API
o Improvements to installation docs for the server
o Fixed issue with cache hits showing up as "undefined" in webadmin.
o Added auto index management API to REST, fixing #399
o Fixed unicode issues in batch operations API in windows and OS X
o Server now disallows creating indexes with empty names. Closes #311
o Attempting to delete a non-existing index now returns 404, closes #349

1.7.M01 (2012-03-12)
--------------------
o Fixed issues #116
o Fixed a NPE in guarded database for the result of Index#putIfAbsent.
o Added Jasmine unit test framework for webadmin, with a first test and JUnit formatted test reports.