@@ -1,0 +1,25 @@
+[[rest-api-property-values]]
+== Property values ==
+
+The REST API allows setting properties on nodes and relationships through direct RESTful operations. However, there are
+restrictions as to what types of values can be used as property values. Allowed value types are as follows:
+
+- Integers: With capacity the same as Java's Long type
+- Floats: With capacity the same as Java's Double type
+- Booleans
+- Strings
+- Bytes: Although this is not available through the normal JSON transport format
+- Arrays: Of the above basic types
+
+=== Arrays ===
+
+There are two important points to be made about array values. First, all values in the array must be of the same type.
+That means either all integers, all floats, all booleans, all strings or all bytes. Mixing types is not currently
+supported.
+
+Second, storing empty arrays is only possible given certain preconditions. Because the JSON transfer format does not
+contain type information for arrays, type is inferred from the values in the array. If the array is empty, the Neo4j
+Server cannot determine the type. In these cases, it will check if an array is already stored for the given property,
+and will use the stored arrays type when storing the empty array. If no array exists already, the server will reject
+the request.
+
